# bem_helmholtz_with_dealii

./: CMakeLists.txt  LICENSE  README.md
include/: acoustic_bem.hpp  defs_dealii.hpp  helmholtz_kernel.hpp  laplace_kernel.hpp
src/: acoustic_bem.cpp  helmholtz_kernel.cpp  laplace_kernel.cpp  main.cpp  main_tests.cpp
